# ORB-SLAM2-FOR-ANDROID

./: README.md
orbslam2-android/: .project  settings.gradle
orbslam2-android/app/: CMakeLists.txt  build.gradle
orbslam2-android/app/release/: app-release.apk
orbslam2-android/app/src/androidTest/java/com/example/vicki/orbslam2_android/: ExampleInstrumentedTest.java
orbslam2-android/app/src/main/: AndroidManifest.xml
orbslam2-android/app/src/main/cpp/: native-lib.cpp
orbslam2-android/app/src/main/java/com/example/orb_slam2_android/: CameraModeActivity.java  DataSetModeActivity.java  FileChooserActivity.java  FileChooserAdapter.java  MainActivity.java  ORBSLAMForCameraActivity.java  ORBSLAMForDataSetActivity.java
orbslam2-android/app/src/main/java/com/example/orb_slam2_android/nativefunc/: OrbNdkHelper.java
orbslam2-android/app/src/main/res/layout/: activity_camera_orb.xml  activity_main.xml
orbslam2-android/app/src/main/res/values/: strings.xml
orbslam2-android/app/src/test/java/com/example/vicki/orbslam2_android/: ExampleUnitTest.java
orbslam2-android/dbow2/: .project  CMakeLists.txt  build.gradle
orbslam2-android/dbow2/src/androidTest/java/com/example/dbow2/: ExampleInstrumentedTest.java
orbslam2-android/dbow2/src/main/: AndroidManifest.xml
orbslam2-android/dbow2/src/main/res/values/: strings.xml
orbslam2-android/dbow2/src/test/java/com/example/dbow2/: ExampleUnitTest.java
orbslam2-android/g2o/: .project  CMakeLists.txt  build.gradle
orbslam2-android/g2o/src/androidTest/java/com/example/g2o/: ExampleInstrumentedTest.java
orbslam2-android/g2o/src/main/: AndroidManifest.xml
orbslam2-android/g2o/src/main/res/values/: strings.xml
orbslam2-android/g2o/src/test/java/com/example/g2o/: ExampleUnitTest.java
orbslam2-android/gradle/wrapper/: gradle-wrapper.properties
orbslam2-android/openCVLibrary342/: build.gradle
orbslam2-android/orb_slam2/: .project  CMakeLists.txt  build.gradle
orbslam2-android/orb_slam2/src/androidTest/java/com/example/orb_slam2/: ExampleInstrumentedTest.java
orbslam2-android/orb_slam2/src/main/: AndroidManifest.xml
orbslam2-android/orb_slam2/src/main/cpp/ORB_SLAM2/: Frame.h  Initializer.cc  KeyFrameDatabase.cc  ORBVocabulary.h  ORBmatcher.cc  PnPsolver.cc  Sim3Solver.cc  System.h  Tracking.h
orbslam2-android/orb_slam2/src/main/cpp/ORB_SLAM2/opencv2/features2d/: features2d.hpp
orbslam2-android/orb_slam2/src/main/res/values/: strings.xml
orbslam2-android/orb_slam2/src/test/java/com/example/orb_slam2/: ExampleUnitTest.java
